--- a/source/R5T.A0003/R5T.A0003.csproj
+++ b/source/R5T.A0003/R5T.A0003.csproj
@@ -1,11 +1,36 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\R5T.Magyar\source\R5T.Magyar\R5T.Magyar.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.D0048\source\R5T.D0048.A001\R5T.D0048.A001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0075\source\R5T.D0075.Default\R5T.D0075.Default.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0081\source\R5T.D0081.Base\R5T.D0081.Base.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0093\source\R5T.D0093.I002\R5T.D0093.I002.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0095\source\R5T.D0095.D001.I001\R5T.D0095.D001.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0095\source\R5T.D0095.D001.I002\R5T.D0095.D001.I002.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0096\source\R5T.D0096.A001\R5T.D0096.A001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0096\source\R5T.D0096.D003.I001\R5T.D0096.D003.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0096\source\R5T.D0096.D003.I002\R5T.D0096.D003.I002.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0098\source\R5T.D0098.Base\R5T.D0098.Base.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0099\source\R5T.D0099.A001\R5T.D0099.A001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0099\source\R5T.D0099.D003.I001\R5T.D0099.D003.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0099\source\R5T.D0099.D003.I002\R5T.D0099.D003.I002.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0102\source\R5T.D0102.I001\R5T.D0102.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0103\source\R5T.D0103.I001\R5T.D0103.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0104\source\R5T.D0104.I001\R5T.D0104.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0106\source\R5T.D0106.D002.I001\R5T.D0106.D002.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0106\source\R5T.D0106.I001\R5T.D0106.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0107\source\R5T.D0107.I001\R5T.D0107.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.L0013\source\R5T.L0013.I001\R5T.L0013.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.Lombardy\source\R5T.Lombardy\R5T.Lombardy.csproj" />
+    <ProjectReference Include="..\..\..\R5T.Ostrogothia\source\R5T.Ostrogothia.Base\R5T.Ostrogothia.Base.csproj" />
+    <ProjectReference Include="..\..\..\R5T.Quadia\source\R5T.Quadia.A001\R5T.Quadia.A001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.Quadia\source\R5T.Quadia.D002.I001\R5T.Quadia.D002.I001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0021\source\R5T.T0021\R5T.T0021.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X002\R5T.T0062.X002.csproj" />
+  </ItemGroup>
 
 </Project>
