--- a/source/R5T.A0003/R5T.A0003.csproj
+++ b/source/R5T.A0003/R5T.A0003.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.D0048\source\R5T.D0048.A001\R5T.D0048.A001.csproj" />
     <ProjectReference Include="..\..\..\R5T.D0065\source\R5T.D0065.Standard\R5T.D0065.Standard.csproj" />
@@ -36,5 +36,4 @@
     <ProjectReference Include="..\..\..\R5T.T0021\source\R5T.T0021\R5T.T0021.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X002\R5T.T0062.X002.csproj" />
   </ItemGroup>
-
 </Project>
